--- a/src/app/nav/side-bar/side-bar.component.html
+++ b/src/app/nav/side-bar/side-bar.component.html
@@ -2,19 +2,16 @@
   <div class="sidebar-header">
     <a class="logo" [routerLink]="'/'">Util</a>
   </div>
-  
+
   <nav class="navigation">
     <div *ngFor="let c of categories" class="category-section">
       <div class="category-header">
         <span class="category-name">{{ c.name }}</span>
         <div class="category-line"></div>
       </div>
-      
+
       <div class="nav-items">
-        <a *ngFor="let r of c.routes" 
-           [routerLink]="[r.url]" 
-           routerLinkActive="active"
-           class="nav-item">
+        <a *ngFor="let r of c.routes" [routerLink]="[r.url]" routerLinkActive="active" class="nav-item">
           <div class="nav-dot"></div>
           <span class="nav-text">{{ r.name }}</span>
           <div class="nav-arrow">→</div>
@@ -22,11 +19,11 @@
       </div>
     </div>
   </nav>
-  
+
   <div class="sidebar-footer">
     <div class="version-info">
       <span class="version-label">Version</span>
-      <span class="version-number">2.0</span>
+      <span class="version-number">2.1</span>
     </div>
   </div>
 </div>
