--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-animated-background></app-animated-background>
 <div class="left-gutter"></div>
 <div class="middle-section">
   <app-side-bar></app-side-bar>
