--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,16 +36,10 @@ app-side-bar {
   //   rgba(15, 15, 26, 0.95) 0%, 
   //   rgba(26, 26, 46, 0.9) 50%,
   //   rgba(22, 33, 62, 0.95) 100%);
-  min-width: 0;
+  width: 280px;
+  flex-shrink: 0;
 }
 
-.right-gutter {
-  // background: linear-gradient(180deg, 
-  //   rgba(15, 15, 26, 0.95) 0%, 
-  //   rgba(26, 26, 46, 0.9) 50%,
-  //   rgba(22, 33, 62, 0.95) 100%);
-  min-width: 0;
-}
 
 .middle-section {
   display: flex;
@@ -55,13 +49,10 @@ app-side-bar {
   width: 100%;
   position: relative;
   z-index: 1;
-  margin-left: 280px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.left-gutter,
-.right-gutter {
-  flex-grow: 1;
-}
 
 .back {
   height: 100vh;
@@ -168,11 +159,9 @@ app-side-bar {
 @media (max-width: 1200px) {
   .middle-section {
     max-width: 100%;
-    margin-left: 260px;
   }
   
-  .left-gutter,
-  .right-gutter {
+  .left-gutter {
     display: none;
   }
 }
@@ -186,7 +175,6 @@ app-side-bar {
     flex-direction: column;
     height: auto;
     min-height: 100vh;
-    margin-left: 0;
     margin-top: 120px;
   }
   
