--- a/src/app/converters/convert-view/convert-view.component.html
+++ b/src/app/converters/convert-view/convert-view.component.html
@@ -11,13 +11,15 @@
     </div>
   </div>
 
-  <div *ngIf="error()" class="error-banner">
-    <div class="error-icon">⚠️</div>
-    <div class="error-content">
-      <span class="error-title">Conversion Error</span>
-      <span class="error-message">{{ error() }}</span>
+  @if (error()) {
+    <div class="error-banner">
+      <div class="error-icon">⚠️</div>
+      <div class="error-content">
+        <span class="error-title">Conversion Error</span>
+        <span class="error-message">{{ error() }}</span>
+      </div>
     </div>
-  </div>
+  }
 
   <div class="editors-container">
     <div class="editor-panel input-panel">
@@ -38,19 +40,14 @@
         </div>
       </div>
       <div class="editor-wrapper">
-        <ngx-monaco-editor
+        <app-codemirror-editor
           #editor
           class="editor"
-          [options]="inputOptions"
+          [config]="inputOptions"
+          [placeholder]="'Paste or type your ' + convertService.languageFrom.toUpperCase() + ' data here'"
           [ngModel]="inputCode()"
           (ngModelChange)="inputChanged($event)"
-        ></ngx-monaco-editor>
-        <div class="editor-overlay" *ngIf="!inputCode()">
-          <div class="placeholder-content">
-            <div class="placeholder-icon">📝</div>
-            <p class="placeholder-text">Paste or type your {{ convertService.languageFrom.toUpperCase() }} data here</p>
-          </div>
-        </div>
+        ></app-codemirror-editor>
       </div>
     </div>
 
@@ -72,17 +69,12 @@
         </div>
       </div>
       <div class="editor-wrapper">
-        <ngx-monaco-editor 
+        <app-codemirror-editor 
           class="editor" 
-          [options]="outputOptions" 
+          [config]="outputOptions" 
+          [placeholder]="'Converted ' + convertService.languageTo.toUpperCase() + ' will appear here'"
           [ngModel]="outputCode()"
-        ></ngx-monaco-editor>
-        <div class="editor-overlay" *ngIf="!outputCode() && !error()">
-          <div class="placeholder-content">
-            <div class="placeholder-icon">🔄</div>
-            <p class="placeholder-text">Converted {{ convertService.languageTo.toUpperCase() }} will appear here</p>
-          </div>
-        </div>
+        ></app-codemirror-editor>
       </div>
     </div>
   </div>
